Hide businesses in URL (renamed to b) and fix some css
I don't like how long these URLs are becoming, so I'm going to periodically start changing the routes' paths to read to something simpler, as I did for businesses->b. It makes the URL cleaner. I also want to hide the :id numbers for objects, so I'll probably slugify things like member name and stuff like that.

I also fixed some CSS that was bothering me. The <content> tag for the _table partial would spill the title out of its box if the window was too small. Now it doesn't.

--- a/app/assets/stylesheets/components/_table.css
+++ b/app/assets/stylesheets/components/_table.css
@@ -18,6 +18,7 @@ table {
   max-width: 95%;
   margin: 0 auto;
   box-shadow: var(--main-box-shadow);
+  word-wrap: break-word;
 }
 
 table caption {
@@ -29,6 +30,7 @@ table caption {
   background-color: var(--main-color);
   font-size: 20px;
   font-weight: bold;
+  min-width: 160px;
 }
 
 table th {
